namespace Gazillion
{
    public enum AuthMessage : uint
    {
        AuthTicket,
        ConsoleCreateAccountMessageResponse,
    }

    public enum BillingCommonMessage : uint
    {
        MHCatalogEntryType,
        MHCatalogEntryTypeModifier,
        MHBannerUrl,
        MHLocalizedCatalogUrls,
        MHLocalizedCatalogEntry,
        MHLocalizedCatalogEntryUrlOrData,
        MHCatalogGuidEntry,
        MarvelHeroesCatalogEntry,
        GiftHistoryEntry,
        GiftHistoryForPlayerEntry,
        AwardItem,
        AwardCouponDescription,
        AwardCoupon,
        AwardEntry,
        BillingPlayStationUpdateEntitlementStatus,
        BillingPlayStationUpdateEntitlementStatusResponse,
        BillingPlayStationProcessPendingEntitlementTransactions,
    }

    public enum ChatCommonMessage : uint
    {
        ChatMessageAttachments,
        ChatMessage,
    }

    public enum ClientToGameServerMessage : uint
    {
        NetMessageReadyForGameJoin,
        NetMessagePlayerSystemMetrics,
        NetMessagePlayerSteamInfo,
        NetMessageSyncTimeRequest,
        NetMessageSetTimeDialation,
        NetMessageIsRegionAvailable,
        NetMessageUpdateAvatarState,
        NetMessageCellLoaded,
        NetMessageTeleportAckResponse,
        NetMessageAdminCommand,
        NetMessageTryActivatePower,
        NetMessagePowerRelease,
        NetMessageTryCancelPower,
        NetMessageTryCancelActivePower,
        NetMessageContinuousPowerUpdateToServer,
        NetMessageCancelPendingAction,
        NetMessageStartAIDebugUI,
        NetMessageStopAIDebugUI,
        NetMessageStartAIPerformanceUI,
        NetMessageStopAIPerformanceUI,
        NetMessageStartMissionDebugUI,
        NetMessageStopMissionDebugUI,
        NetMessageStartPropertiesDebugUI,
        NetMessageStopPropertiesDebugUI,
        NetMessageStartConditionsDebugUI,
        NetMessageStopConditionsDebugUI,
        NetMessageStartPowersDebugUI,
        NetMessageStopPowersDebugUI,
        NetStructMessageStoreMetric,
        NetMessagePing,
        NetMessageFPS,
        NetMessagePickupInteraction,
        NetMessageTryInventoryMove,
        NetMessageTryMoveCraftingResultsToGeneral,
        NetMessageInventoryTrashItem,
        NetMessageThrowInteraction,
        NetMessagePerformPreInteractPower,
        NetMessageUseInteractableObject,
        NetMessageTryCraft,
        NetMessageUseWaypoint,
        NetMessageDebugAcquireAndSwitchToAvatar,
        NetMessageSwitchAvatar,
        NetMessageSelectPublicEventTeam,
        NetMessageAssignHotkey,
        NetMessageUnassignHotkey,
        NetMessageSelectAbilityKeyMapping,
        NetMessageAbilitySlotToAbilityBar,
        NetMessageAbilityUnslotFromAbilityBar,
        NetMessageAbilitySwapInAbilityBar,
        NetMessageModCommitTemporary,
        NetMessageModReset,
        NetMessagePowerPointAllocationCommit,
        NetMessageRequestDeathRelease,
        NetMessageRequestResurrectDecline,
        NetMessageRequestResurrectAvatar,
        NetMessageReturnToHub,
        NetMessageRequestStoryWarp,
        NetMessageRequestMissionRewards,
        NetMessageRequestRemoveAndKillControlledAgent,
        NetMessageDamageMeter,
        NetMessageInvitePlayer,
        NetMessageRequestPartyJoinPortal,
        NetMessageDeclineGroupInvite,
        NetMessageLeaveGroup,
        NetMessageChangeGroupLeader,
        NetMessageBootPlayer,
        NetMessageDisbandGroup,
        NetMessageGroupChangeType,
        NetMessageGroupChangeTypeConfirmResponse,
        NetMessageDuelInvite,
        NetMessageDuelAccept,
        NetMessageDuelCancel,
        NetMessageMetaGameUpdateNotification,
        NetMessageChat,
        NetMessageTell,
        NetMessageReportPlayer,
        NetMessageChatBanVote,
        NetMessageGetCatalog,
        NetMessageGetCurrencyBalance,
        NetMessageBuyItemFromCatalog,
        NetMessageBuyGiftForOtherPlayer,
        NetMessagePurchaseUnlock,
        NetMessageGetGiftHistory,
        EntityPreviewerEnum,
        NetMessageEntityPreviewerNewTargets,
        NetMessageEntityPreviewerClearTargets,
        NetMessageEntityPreviewerSetTargetRef,
        NetMessageEntityPreviewerActivatePower,
        NetMessageEntityPreviewerAddTarget,
        NetMessageEntityPreviewerSetEntityState,
        NetMessageEntityPreviewerApplyConditions,
        NetMessageCreateNewPlayerWithSelectedStartingAvatar,
        NetMessageOnKioskStartButtonPressed,
        NetMessageNotifyFullscreenMovieStarted,
        NetMessageNotifyFullscreenMovieFinished,
        NetMessageNotifyLoadingScreenFinished,
        NetMessageBotSetLevel,
        NetMessageBotGodMode,
        NetMessageBotPickAvatar,
        NetMessageBotRegionChange,
        NetMessageBotWarpAreaNext,
        NetMessageBotLootGive,
        NetMessageBotSetPvPFaction,
        NetMessageBotPvPQueue,
        NetMessageGetTrackerReport,
        NetMessagePlayKismetSeqDone,
        NetMessageVerifyFailedForRepId,
        NetMessageGracefulDisconnect,
        NetMessageRequestStartNewGame,
        NetMessageSetDialogTarget,
        NetMessageDialogResult,
        NetMessageVendorRequestBuyItemFrom,
        NetMessageVendorRequestSellItemTo,
        NetMessageVendorRequestDonateItemTo,
        NetMessageVendorRequestRefresh,
        NetMessageTryModifyCommunityMemberCircle,
        NetMessagePullCommunityStatus,
        NetMessageGuildMessageToPlayerManager,
        NetMessageAkEvent,
        NetMessageSetShowTips,
        NetMessageSetTipSeen,
        NetMessageResetSeenTips,
        NetMessageHUDTutorialDismissed,
        NetMessageTryMoveInventoryContentsToGeneral,
        NetMessageSetPlayerGameplayOptions,
        NetMessageTeleportToPartyMember,
        NetMessageRegionRequestQueueCommandClient,
        NetMessageSelectAvatarSynergies,
        NetMessageRequestLegendaryMissionReroll,
        NetMessageAttemptShareLegendaryMission,
        NetMessageAttemptShareLegendaryMissionResponse,
        NetMessageRequestPlayerOwnsItemStatus,
        NetMessageRequestInterestInInventory,
        NetMessageRequestInterestInAvatarEquipment,
        NetMessageRequestInterestInTeamUpEquipment,
        NetMessageTryTeamUpSelect,
        NetMessageRequestTeamUpDismiss,
        NetMessageTryTeamUpStyleSelect,
        NetMessageSelectOmegaBonus,
        NetMessageOmegaBonusAllocationCommit,
        NetMessageRespecOmegaBonus,
        NetMessageRespecPowerSpec,
        NetMessageNewItemGlintPlayed,
        NetMessageNewItemHighlightCleared,
        NetMessageUnassignMappedPower,
        NetMessageVanityTitleSelect,
        NetMessageRequestGlobalEventUpdate,
        NetMessageHasPendingGift,
        NetMessagePlayerTradeStart,
        NetMessagePlayerTradeCancel,
        NetMessagePlayerTradeSetConfirmFlag,
        NetMessageRequestPetTechDonate,
        NetMessageSetActivePowerSpec,
        NetMessageChangeCameraSettings,
        NetMessageRequestSocketAffix,
        NetMessageUISystemLockState,
        NetMessageEnableSpecializationPower,
        NetMessageStashInventoryViewed,
        NetMessageStashCurrentlyOpen,
        NetMessageWidgetButtonResult,
        NetMessageStashTabInsert,
        NetMessageStashTabOptions,
        NetMessageLeaderboardRequest,
        NetMessageLeaderboardArchivedInstanceListRequest,
        NetMessageLeaderboardInitializeRequest,
        NetMessageRequestLocalCoopStart,
        NetMessageRequestLocalCoopEnd,
        NetMessageCouponAwardPresented,
        NetMessageBillingRoutedClientMessage,
    }

    public enum ClientToGroupingManagerMessage : uint
    {
        ClientIgnoredInvite,
    }

    public enum CommonMessage : uint
    {
        NetStructPoint3,
        NetStructIPoint3,
        NetStructPoint2,
        NetStructIPoint2,
        NetStructProperty,
        NetStructPropertyList,
        NetStructFormatStringArg,
        NetStructFormatString,
        NetStructDialogButton,
        NetStructDialog,
        NetStructRegionLocation,
        NetStructRegionTarget,
        NetStructTransferParams,
        NetStructRegionOrigin,
        NetStructPortalInstance,
        ChangeRegionRequestHeader,
        NetStructCreateRegionParams,
        NetStructModChangeObject,
        NetStructPowerPointAllocation,
        NetStructAffixSpec,
        NetStructItemSpec,
        CommunityMemberBroadcast,
        CommunityNotify,
        NetStructLiveTuningSettingEnumValue,
        NetStructLiveTuningSettingProtoEnumValue,
        ChangeRegionFailed,
        NetStructChatChannelFilterState,
        NetStructChatTabState,
        NetStructGameplayOptions,
        ShareLegendaryMissionRequest,
        ShareLegendaryMissionResult,
        BillingP2PGiftResult,
        LeaderboardPlayerScoreQuery,
        LeaderboardGuildScoreQuery,
        LeaderboardMetaScoreQuery,
        LeaderboardDataQuery,
        LeaderboardMetadata,
        LeaderboardEntry,
        LeaderboardTableData,
        LeaderboardScoreData,
        LeaderboardReport,
        LeaderboardInstanceData,
        WorldViewEntry,
    }

    public enum FrontendProtocolMessage : uint
    {
        LoginDataPB,
        LoginDataConsole,
        CreateAccountConsole,
        AcceptDocuments,
        SelectPlayerName,
        InitialClientHandshake,
        ClientCredentials,
        LoginQueueStatus,
        SessionEncryptionChanged,
        ExtendedLoginError,
        EncryptedTrafficHeader,
    }

    public enum GameServerToClientMessage : uint
    {
        NetMessageReadyAndLoggedIn,
        NetMessageReadyAndLoadedOnGameServer,
        NetMessageReadyForTimeSync,
        NetStructGameOptions,
        NetMessageLocalPlayer,
        NetMessageEntityCreate,
        NetMessageEntityDestroy,
        NetMessageEntityTracked,
        NetMessageEntitySelectorAction,
        NetMessageInventoryMove,
        NetMessageInventoryUnlock,
        NetMessagePermaBuffUnlock,
        NetMessageEntityKill,
        NetMessageFullscreenMovieSync,
        NetMessageQueueFullscreenMovie,
        NetMessageQueueLoadingScreen,
        NetMessageDequeueLoadingScreen,
        NetMessageRegionChange,
        NetMessageEntityPosition,
        NetMessageLocomotionStateUpdate,
        NetMessageLootRollFailed,
        NetMessageInterestPolicies,
        NetMessageUnableToChangeRegion,
        NetStructAreaConnection,
        NetMessageAddArea,
        NetMessageRemoveArea,
        NetStructReservedSpawn,
        NetMessageCellCreate,
        NetMessageCellDestroy,
        NetMessageEnvironmentUpdate,
        NetMessageDebugSpawnMapVisualization,
        NetMessageChangeAOIPolicies,
        NetMessageFullInWorldHierarchyUpdateEnd,
        NetMessageFullInWorldHierarchyUpdateBegin,
        NetMessageAdminCommandResponse,
        NetMessageActivatePowerFailed,
        NetMessageCancelPower,
        NetMessageContinuousPowerUpdateToClient,
        NetMessageActivatePower,
        NetMessagePreActivatePower,
        NetMessagePowerResult,
        NetMessagePowerBounce,
        NetMessageOnPreInteractPowerEnd,
        NetMessageRegionPrimitiveBox,
        NetMessageRegionPrimitiveTriangle,
        NetMessageRegionPrimitiveSphere,
        NetMessageRegionPrimitiveCircle,
        NetMessageRegionPrimitiveLine,
        NetMessageMarkFirstGameFrame,
        NetMessageBeginExitGame,
        NetMessageSystemMessage,
        NetMessageAIPerformanceUIUpdate,
        NetMessageAIDebugUIUpdate,
        NetMessagePropertiesDebugUIUpdate,
        NetMessageConditionsDebugUIUpdate,
        NetMessagePowersDebugUIUpdate,
        NetMessageMissionDebugUIUpdate,
        NetMessageDebugEntityPosition,
        NetMessageServerFrameProfile,
        NetMessagePingResponse,
        NetMessageEntityEnterGameWorld,
        NetMessageTeleportAckRequest,
        NetMessageServerVersion,
        NetStructAgentSpec,
        NetStructVendorXPSummary,
        NetStructItemSpecStack,
        NetStructLootResultSummary,
        NetStructVaporizedItem,
        NetMessageVaporizedLootResult,
        NetMessageSocketGem,
        NetMessageMissionUpdate,
        NetStructMissionInteractionTag,
        NetMessageMissionObjectiveUpdate,
        NetMessageMissionRewardsResponse,
        NetMessageCurrentAvatarChanged,
        NetMessageNewAvatarAcquired,
        NetMessageNewTeamUpAcquired,
        NetStructPrefetchCell,
        NetMessagePrefetchAssets,
        NetMessagePrefetchRegionsForDownload,
        NetMessageQueryIsRegionAvailable,
        NetMessageShowOverheadText,
        NetMessageShowXPAwardedText,
        NetMessageAIToggleState,
        NetMessageDamageToggleState,
        NetMessageDynamicCombatLevelToggleState,
        NetMessageMatchTeamRosterNotification,
        NetMessageMatchTeamSizeNotification,
        NetMessageChatFromGameSystem,
        NetMessageChatFromMetaGame,
        NetMessageBroadcastRareItem,
        NetMessageChatError,
        NetMessageCatalogItems,
        AwardCouponEntryDesc,
        AwardCouponEntry,
        AwardItemEntry,
        NetMessageGetCurrencyBalanceResponse,
        NetMessageBuyItemFromCatalogResponse,
        NetMessageBuyGiftForOtherPlayerResponse,
        NetMessageGrantGToPlayerNotification,
        NetMessagePurchaseUnlockResponse,
        NetMessageEntityPreviewerNewTarget,
        NetMessageRemoteMissionNotification,
        NetMessageMetaGameInfoNotification,
        NetMessageClearMetaGameInfoNotification,
        NetMessageUINotificationMessage,
        NetMessageShowPvPScoreboard,
        NetMessageStartPvPTimer,
        NetMessageStopPvPTimer,
        NetMessageSetDifficultyThresholds,
        NetMessageSetUITrackedEntityId,
        NetMessageSetTimerText,
        NetMessageSetModeText,
        NetMessageSetExtraText,
        NetMessageBannerMessage,
        NetMessageHUDTutorial,
        NetMessageRegionAvatarSwapUpdate,
        NetMessageRegionRestrictedRosterUpdate,
        NetMessageTeamSelectDialog,
        NetMessageAIAggroNotification,
        NetMessageAITargetChangeNotification,
        NetMessageStoryNotification,
        NetMessageSyncTimeReply,
        NetMessageInitialTimeSync,
        NetMessageSelectStartingAvatarForNewPlayer,
        NetMessageShowKioskStartScreen,
        NetMessageInventoryFull,
        NetMessageUnloadPackagesStart,
        NetMessageUnloadPackagesEnd,
        NetMessageForceDisconnect,
        NetMessageLevelUp,
        NetMessageOmegaPointGain,
        NetMessageVendorLevelUp,
        NetMessageVendorRefresh,
        NetMessageCraftingSuccess,
        NetMessageCraftingFailure,
        NetMessagePlayPowerVisuals,
        NetMessageWaypointUnlocked,
        NetMessageReplicationArchive,
        NetMessageSetProperty,
        NetMessageRemoveProperty,
        NetMessagePvPScoreScoreUpdateEntry,
        NetMessagePvPScorePlayerNewId,
        NetMessagePvPScorePlayerTeamChange,
        NetMessagePvPScorePlayerUpdate,
        NetMessageTransitionUpdate,
        NetMessageAvatarNameChange,
        NetMessageMissionInteractRepeat,
        NetMessageMissionInteractRelease,
        NetMessageAddCondition,
        NetMessageDeleteCondition,
        NetMessageEnableCondition,
        NetMessageChangeConditionPauseTime,
        NetMessageChangeConditionDuration,
        NetMessageAbilitySlotToAbilityBarFromServer,
        NetMessageAbilityUnslotFromAbilityBarFromServer,
        NetMessageAbilitySwapInAbilityBarFromServer,
        NetMessageAssignHotkeyFromServer,
        NetMessageUnassignHotkeyFromServer,
        NetMessagePowerCollectionAssignPower,
        NetMessageAssignPowerCollection,
        NetMessagePowerCollectionUnassignPower,
        NetMessageUpdatePowerIndexProps,
        NetMessageOnWaypointUpdated,
        NetMessageInternalReportPlayerLoadError,
        MessageReportEntry,
        NetMessageMessageReport,
        NetMessageUpdateMiniMap,
        NetMessageMoveToAlternateLandingSpot,
        NetMessageConsoleMessage,
        NetMessageAvatarOnKilledInfoOverride,
        NetMessageOnResurrect,
        NetMessageOnResurrectRequest,
        NetMessageOnResurrectDecline,
        NetMessageReloadPackagesStart,
        NetMessagePlayStoryBanter,
        NetMessagePlayUISoundTheme,
        NetMessagePlayKismetSeq,
        NetMessageGracefulDisconnectAck,
        NetMessageLiveTuningUpdate,
        NetMessageUpdateSituationalTarget,
        NetMessageConfirmStartNewGame,
        NetMessageOneTimeSnapCamera,
        NetMessageModifyCommunityMemberFailure,
        NetMessageModifyCommunityMember,
        NetMessageReceiveCommunityNotify,
        NetMessageItemBindingChanged,
        NetMessageItemsHeldForRecovery,
        NetMessageItemRecovered,
        NetMessageSwitchToPendingNewAvatarFailed,
        NetMessageCoopStartEntranceFailed,
        NetMessageGuildMessageToClient,
        NetMessageEntityGuildInfo,
        NetMessageLeaveGuild,
        NetMessageGuildSystemMessage,
        NetMessageRegionDifficultyChange,
        NetMessageMetaGameWaveUpdate,
        NetMessagePvEInstanceCrystalUpdate,
        NetMessagePvEInstanceDeathUpdate,
        NetMessagePvEInstanceRegionScoreUpdate,
        NetMessageMetaGameBanner,
        NetMessagePostDialogToClient,
        NetMessageRemoveDialogFromClient,
        NetMessageCancelPendingActionToClient,
        NetMessageRecvAkEventFromEntity,
        NetMessageShowTutorialTip,
        NetMessageMatchQueueUpdateClient,
        GlobalEventCriteriaData,
        NetMessageGlobalEventDataUpdate,
        NetMessageGlobalEventLeaderboardUpdate,
        NetMessageOpenUIPanel,
        NetMessagePlayerOwnsItemResponse,
        NetMessageShowShareLegendaryMissionNotification,
        NetMessageShareLegendaryMissionResult,
        NetMessageUISyncDataUpdate,
        NetMessagePlayerTradeStatus,
        NetMessageUISyncDataRemove,
        AchievementDatabaseDump,
        NetMessageAchievementDatabaseDump,
        NetMessageAchievementStateUpdate,
        NetMessagePartyKickGracePeriod,
        NetMessageReceivedGift,
        NetMessageAchievementCompletedByPartyMember,
        NetMessageVerifyOnClient,
        NetMessageCreateAndOpenFileOnClient,
        NetMessageInventoryLoaded,
        NetMessageLeaderboardReportClient,
        NetMessageLeaderboardCheatResponseClient,
        LeaderboardArchivedInstanceListData,
        LeaderboardInitData,
        NetMessageLeaderboardArchivedInstanceListResponse,
        NetMessageLeaderboardInitializeRequestResponse,
        NetMessageLeaderboardStateChange,
        NetMessageLeaderboardRewarded,
        NetMessageGiftHistoryResult,
        NetMessageStoreTooBusy,
        NetMessageSetDebuggingClient,
        NetMessageLocalCoopStart,
        NetMessageLocalCoopEnd,
        NetMessageAwardUpdate,
        NetMessageDisplayCouponNotifications,
        NetMessagePublicEventTeamAssigned,
        NetMessageRoutedClientMessageResponse,
        NetMessageGiftingRestrictionsUpdate,
    }

    public enum GazillionCommonMessage : uint
    {
    }

    public enum GlobalEventsCommonMessage : uint
    {
    }

    public enum GroupingManagerMessage : uint
    {
        PerPlayerInfo,
        ClientInvitedToGroup,
        ClientInviteAcceptFailed,
        ClientCreateGroup,
        PlayerJoinedGroup,
        GroupChangeType,
        PlayerLeftGroup,
        PlayerChangedGroupLeader,
        ClientBootedFromGroup,
        KickGroupMemberAttemptFailed,
        PlayerDeclinedInvite,
        CurrentPartyInfo,
        ChatResponseToExternalLogin,
        ChatNormalMessage,
        ChatTellMessage,
        ChatBroadcastMessage,
        ChatErrorMessage,
        ChatBanVoteResponse,
        GroupingReportInvitationDestinationForPortal,
        GroupingOperationResultMsg,
        GroupingManagerRemovedPlayer,
        GroupingManagerAddedPlayer,
        GroupingManagerCreateGroup,
        GroupingManagerGroupChangeType,
        GroupingManagerPlayerEnteredRegion,
        GroupingManagerUpdatedPartyBoostCount,
        ChatCreateChatRoomResult,
        ChatAddPlayerToRoomResult,
        ChatScrubTextResult,
        ChatServerNotification,
        ChatClientIsLoggedIn,
    }

    public enum GuildMessage : uint
    {
        GuildForm,
        GuildFormResult,
        GuildDisbanded,
        GuildChangeName,
        GuildChangeNameResult,
        GuildNameChanged,
        GuildChangeMotd,
        GuildChangeMotdResult,
        GuildMotdChanged,
        GuildMemberNameChanged,
        GuildInvite,
        GuildInviteResult,
        GuildInvitedToJoin,
        GuildRespondToInvite,
        GuildRespondToInviteResult,
        GuildMemberInfo,
        GuildChangeMember,
        GuildChangeMemberResult,
        GuildMembersInfoChanged,
        GuildCompleteInfo,
        GuildMessageSetToServer,
        GuildMessageSetToClient,
        GuildMessageSetToPlayerManager,
    }

    public enum MatchCommonMessage : uint
    {
        MatchTeamDescription,
        MatchGameDescription,
        MatchQueueDescription,
        MatchTeamResultData,
        MatchResultData,
        MatchPlayerStatisticsSummary,
    }

    public enum PubSubProtocolMessage : uint
    {
        PubSubPublish,
        PubSubSubscribe,
        PubSubEventNotification,
        PubSubOrderlyShutdown,
        PubSubForceLogRollover,
        PubSubServerStatusUpdate,
        PubSubServerStatusRequest,
    }
}
